# rfmp

./: Cargo.toml  README.md
.gentoo/games-misc/rfmp/: metadata.xml  rfmp-9999.ebuild  rfmp.tera
.github/workflows/: cd.yml  gentoo-ebuild-release.yml  gentoo-rolling-ebuild.yml  update-license-year.yml
src/: main.rs
