[package]
name = "rfmp"
version = "1.1.0"
authors = ["JohnTheCoolingFan <ivan8215145640@gmail.com>"]
edition = "2021"
description = "A program to pack and install Factorio mods from source code quickly"
license = "MIT"
homepage = "https://discord.gg/rqkaeYJhzS"
repository = "https://github.com/JohnTheCoolingFan/rfmp"

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
mtzip = { path = "../mtzip" }
#mtzip = "1.1"
walkdir = "2"
dirs = "5"
glob = "0.3"
clap = { version="4.2", features = ["derive", "env"] }
