[package]
name = "rfmp"
version = "1.3.1"
authors = ["JohnTheCoolingFan <ivan8215145640@gmail.com>"]
edition = "2021"
description = "A program to pack and install Factorio mods from source code quickly"
license = "MIT"
homepage = "https://discord.gg/rqkaeYJhzS"
repository = "https://github.com/JohnTheCoolingFan/rfmp"

[features]
rayon = ["dep:rayon", "mtzip/rayon"]

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
walkdir = "2"
dirs = "5"
glob = "0.3"
clap = { version="4.2", features = ["derive", "env"] }
mtzip = "4.0.0"
rayon = { version = "1.10.0", optional = true }
cfg-if = "1.0.0"
